more mobile changes

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1873,9 +1873,10 @@ const trustedLogos = [
     }
 
     .node-right-middle {
-      left: auto;
-      right: 4.2%;
-      top: 50%;
+      left: 50%;
+      right: auto;
+      top: 78%;
+      transform: translate(-50%, -50%);
     }
 
     .node-right-bottom {
@@ -2070,6 +2071,7 @@ const trustedLogos = [
       display: block;
       max-width: calc(100% - 0.6rem);
       margin-inline: auto;
+      margin-top: 0.18rem;
       line-height: 1.24;
     }
 
