last edit to mobile view

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1904,7 +1904,7 @@ const trustedLogos = [
     }
 
     .node-right-middle {
-      left: 0;
+      left: -1.8%;
       right: auto;
       top: 50%;
       transform: translateY(-50%);
